adguard-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-external-service
spec:
  ports:
  - port: 8081
    targetPort: 8081

---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-external-service
subsets:
- addresses:
  - ip: 10.42.0.1
  ports:
  - port: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
spec:
  rules:
  - host: adguard.anuj
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-external-service
            port:
              number: 8081
