immich-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-external-service
spec:
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283

---
apiVersion: v1
kind: Endpoints
metadata:
  name: immich-external-service
subsets:
  - addresses:
      - ip: 10.42.0.1 
    ports:
      - port: 2283

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
spec:
  rules:
  - host: immich.anuj
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-external-service
            port:
              number: 2283
