navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4533
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsUser: 1000
          runAsGroup: 1000
        startupProbe:
          httpGet:
            path: /
            port: 4533
          periodSeconds: 10
          failureThreshold: 7
        readinessProbe:
          httpGet:
            path: /
            port: 4533
          periodSeconds: 5
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /
            port: 4533
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 2
        volumeMounts:
        - name: navidrome-data
          mountPath: /data
        - name: navidrome-music
          mountPath: /music
          readOnly: true
      volumes:
      - name: navidrome-data
        hostPath:
          path: /home/anuj/navidrome/data
          type: DirectoryOrCreate
      - name: navidrome-music
        hostPath:
          path: /home/anuj/navidrome/music
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
spec:
  type: LoadBalancer # For iPhone hotspot. Switch to ClusterIP 
  selector:
    app: navidrome
  ports:
  - protocol: TCP
    port: 4533
    targetPort: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - navidrome.snapper-larch.ts.net
  rules:
  - host: navidrome.snapper-larch.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome-service
            port:
              number: 4533
