vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsUser: 1000
          runAsGroup: 1000
        startupProbe:
          httpGet:
            path: /alive
            port: 80
          periodSeconds: 5
          failureThreshold: 7
        readinessProbe:
          httpGet:
            path: /alive
            port: 80
          periodSeconds: 5
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /alive
            port: 80
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 2
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data
      volumes:
      - name: vaultwarden-data
        hostPath:
          path: /home/anuj/vaultwarden/data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - vaultwarden.snapper-larch.ts.net  
  rules:
  - host: vaultwarden.snapper-larch.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
